--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="food.user.demand">
 
-
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <permission
@@ -57,6 +56,11 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning,InnerclassSeparator,MissingApplicationIcon,UnusedAttribute">
+        <activity android:name=".FCFragment.FCDashboardFragment.FCHomeFragmentHotelDetailsActivity.FCSearchFragment.FC_SearchHotelDetailsActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/FCAppStatusBarChange"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            tools:ignore="InnerclassSeparator"/>
         <activity android:name=".Testing_New.RegisterTesting" />
         <activity
             android:name=".FCFragment.FCDashboardFragment.FCAccountActivity.FCHelp.Fc_HelpActivity"
@@ -64,15 +68,16 @@
             android:theme="@style/FCAppStatusBarChange"
             android:windowSoftInputMode="stateAlwaysHidden"
             tools:ignore="InnerclassSeparator" />
-
-       <!-- <service
+        <!--
+ <service
             android:name=".FCPushNotifications.MyFirebaseMessagingService"
             android:exported="false"
             tools:ignore="InnerclassSeparator">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </service>-->
+        </service>
+        -->
         <service
             android:name=".FireBasePushNotification.firebasenotifications.service.MyFirebaseMessagingService"
             android:exported="false"
@@ -81,14 +86,16 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <receiver
             android:name=".FireBasePushNotification.firebasenotifications.service.NotificationReceiver"
             android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </receiver>
+
         <activity android:name=".FCFragment.FCDashboardFragment.FCHomeFragment.Testingdashboard">
 
             <!--
@@ -232,7 +239,6 @@
             android:theme="@style/FCAppStatusBarChange"
             android:windowSoftInputMode="stateAlwaysHidden"
             tools:ignore="InnerclassSeparator" />
-
         <activity
             android:name=".FCFragment.FCDashboardFragment.FCAccountActivity.FC_OrderHistoryActivity"
             android:launchMode="singleTop"
@@ -440,23 +446,20 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
-        </provider>
-
-        <!-- Add your API key here -->
+        </provider> <!-- Add your API key here -->
         <meta-data
             android:name="com.razorpay.ApiKey"
-            android:value="rzp_test_OnV4xcxLMYD5cD"
-            />
-
+            android:value="rzp_test_OnV4xcxLMYD5cD" />
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/splash_bg_sw_600" />
-        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
-             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <!--
+ Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more.
+        -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorAccent" />
-
     </application>
 
 </manifest>
